--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
   },
   "engineStrict": true,
   "dependencies": {
-    "gatsby-plugin-netlify-cms": "^6.4.0",
-    "netlify-cms-app": "^2.15.63",
     "@babel/polyfill": "^7.12.1",
-    "gatsby": "^3.12.0",
+    "gatsby": "^4.4.0",
     "gatsby-plugin-google-analytics": "^3.12.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-netlify-cms": "^6.4.0",
     "gatsby-plugin-react-helmet": "^4.12.0",
     "gatsby-plugin-sass": "^4.12.0",
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-json": "^3.12.0",
     "gatsby-transformer-remark": "^4.9.0",
+    "netlify-cms-app": "^2.15.63",
+    "node-sass": "^6.0.1",
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
