--- a/src/data/config/config.json
+++ b/src/data/config/config.json
@@ -20,7 +20,7 @@
         "meta_twitter_creator": "@zerostaticio"
     },
     "footer": {
-        "copyright_text": "Free Gatsby theme by",
-        "copyright_link": "https://www.zerostatic.io"
+        "copyright_text": "Passion för gamla bilar och prylar",
+        "copyright_link": "https://www.vwentusiasten.se"
     }
 }
